<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="30dp"
            android:text="@string/SingUp"
            android:textColor="@color/background_highlight"
            android:textSize="30dp" />

        <TextView
            android:layout_width="298dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:text="@string/Registro"
            android:textColor="@color/background_highlight"
            android:textSize="14sp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/poster_register" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/Email"
            android:textAlignment="center"
            android:textColor="@color/azul_highlight"
            android:textSize="13sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:hint="Nombre"
            android:textAlignment="textStart"
            android:textColor="@color/background_highlight"
            android:textColorHint="@color/background_highlight"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/email"
            android:textAlignment="textStart"
            android:textColor="@color/background_highlight"
            android:textColorHint="@color/background_highlight"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/password"
            android:textAlignment="textStart"
            android:inputType="textPassword"
            android:textColor="@color/background_highlight"
            android:textColorHint="@color/background_highlight"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:hint="Confirmar Contraseña"
            android:textAlignment="textStart"
            android:inputType="textPassword"
            android:textColor="@color/background_highlight"
            android:textColorHint="@color/background_highlight"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cbAcept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acept"
                android:textColor="@color/black"
                android:buttonTint="@color/background_highlight"
                android:textSize="10sp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="goTerms"
                android:text="@string/terms"
                android:textColor="@color/background_highlight"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btRegisterUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_logo_background"
                android:onClick="showRegisterUser"
                android:text="@string/SingUp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/account"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="7dp"
                    android:onClick="GoLoginReg"
                    android:text="Inicia"
                    android:textAlignment="textStart"
                    android:textSize="10sp"
                    android:textColor="@color/teal_700" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
